# reactpy-web-starter

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
context/: theme_context.py
docs/: custom-templates.md  quickstart.md
hooks/: use_fetch.py  use_local_storage.py  use_store.py  use_theme.py
reactpy_web_starter/: cli.py  core_requirements.txt
static/: styles.css
templates/auth/: main.py  requirements.txt
templates/auth/backend/: auth.py
templates/auth/components/: AuthUI.py
templates/dashboard/: main.py  requirements.txt
templates/full/: main.py
templates/landing/: main.py
templates/shared/components/: button.py  card.py  loader.py  modal.py  table.py
templates/shared/decorators/: memo.py
templates/shared/devtools/: devtools.py
templates/shared/error/: error_boundary.py
templates/shared/js_integration/: js_integration.py
templates/shared/lazy_loading/: lazy.py
templates/shared/route/: router.py
templates/theming/: main.py
tests/: test_auth.py  test_cli.py  test_components.py
utils/: error_handling.py  file_handling.py
