[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactpy-web-starter"
version = "0.1.0" # This will be updated for PyPI releases
authors = [
    { name="Ayush Gupta", email="ayushgupta228@gmail.com" },
]
description = "A powerful and opinionated web starter toolkit for building full-stack applications with ReactPy in Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: ReactPy",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
keywords = ["reactpy", "python", "web", "starter", "boilerplate", "dashboard", "nlp", "ai", "fullstack", "data science"]

[project.urls]
Homepage = "https://github.com/ayush-git228/reactpy-web-starter" 
"Bug Tracker" = "https://github.com/ayush-git228/reactpy-web-starter/issues" 

[project.scripts]
reactpy-web-starter = "reactpy_web_starter.cli:main"

